--- a/armorsecret6.html
+++ b/armorsecret6.html
@@ -49,7 +49,7 @@
                     <center><img id = "photoborder" src="images/armorsecret6.png" alt="Exit door" style="width:850px;height:500px;"></center>
                     
                 
-                <center><p><a href="armorsecret6.html">Exit the facility.</a></p></center>
+                <center><p><a href="VICTORY.html">Exit the facility.</a></p></center>
             </section>
             <footer>Made by Alexander C. Quintal, 2024</footer>
             <footer>All images are property of Bethesda and ID Software, Screenshots of Doom 2</footer>
